--- a/Develop/index.html
+++ b/Develop/index.html
@@ -10,10 +10,12 @@
   <body>
     <div class="wrapper">
       <header>
+        <!--Password Generator title-->
         <h1>Password Generator</h1>
       </header>
       <div class="card">
         <div class="card-header">
+          <!--Generate Password Title-->
           <h2>Generate a Password</h2>
         </div>
         <div class="card-body">
@@ -24,6 +26,7 @@
             aria-label="Generated Password"
           ></textarea>
         </div>
+        <!--Generate Password Button-->
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
         </div>
